--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="col-sm-6">
-    <h1>Cars</h1>
+    <h1>Все Машины</h1>
   </div>
 
   <div class="col-sm-6 text-right">
