add renting payment feature

--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -7,7 +7,7 @@
     <span class="glyphicon glyphicon-pencil"></span>
     Изменить машины
   <% end %>
-  <h1>Show car</h1>
+  <h1>Показать машины</h1>
 </div>
 
 <dl class="dl-horizontal">
