--- a/app/views/cars/_form.html.erb
+++ b/app/views/cars/_form.html.erb
@@ -39,16 +39,16 @@
   <div class="form-group">
     <% if car.persisted? %>
       <div class="float-right">
-        <%= link_to 'Destroy', car, method: :delete, class: "text-danger", data: { confirm: 'Are you sure?' } %>
+        <%= link_to 'Удалить', car, method: :delete, class: "text-danger", data: { confirm: 'Are you sure?' } %>
       </div>
     <% end %>
 
     <%= form.submit class: 'btn btn-primary' %>
 
     <% if car.persisted? %>
-      <%= link_to "Cancel", car, class: "btn btn-link" %>
+      <%= link_to "Отменить", car, class: "btn btn-link" %>
     <% else %>
-      <%= link_to "Cancel", cars_path, class: "btn btn-link" %>
+      <%= link_to "Отменить", cars_path, class: "btn btn-link" %>
     <% end %>
   </div>
 <% end %>
