--- a/app/views/renters/index.html.erb
+++ b/app/views/renters/index.html.erb
@@ -23,7 +23,7 @@
         <th>Email</th>
         <th>Машина</th>
             
-        <th></th>
+        <th colspan=2></th>
         
       </tr>
     </thead>
@@ -40,6 +40,7 @@
         
         
           <td><%= link_to 'Показать', car_renter_path(@car, renter) %></td>
+          <td><%= link_to 'Pay', payment_path(renter.car.id, renter.id) %></td>
           
         <% end %>
       <% end %>
