add download as xlsx feature for reports

--- a/app/views/renters/_form.html.erb
+++ b/app/views/renters/_form.html.erb
@@ -17,6 +17,11 @@
   </div>
 
   <div class="form-group">
+    <%= form.label :middle_name %>
+    <%= form.text_field :middle_name, class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
     <%= form.label :last_name %>
     <%= form.text_field :last_name, class: 'form-control' %>
   </div>
@@ -24,6 +29,31 @@
   <div class="form-group">
     <%= form.label :phone %>
     <%= form.text_field :phone, class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+    <%= form.label :password %>
+    <%= form.text_field :password, class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+    <%= form.label :address %>
+    <%= form.text_field :address, class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+    <%= form.label :registration %>
+    <%= form.text_field :registration, class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+    <%= form.label :fact_address %>
+    <%= form.text_field :fact_address, class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+    <%= form.label :deposit %>
+    <%= form.text_field :deposit, class: 'form-control' %>
   </div>
 
   <div class="form-group">
