--- a/app/views/renters/show.html.erb
+++ b/app/views/renters/show.html.erb
@@ -17,8 +17,26 @@
   <dt>Фамилия:</dt>
   <dd><%= @renter.last_name %></dd>
 
+  <dt>Отчество:</dt>
+  <dd><%= @renter.middle_name %></dd>
+
   <dt>Телефон:</dt>
   <dd><%= @renter.phone %></dd>
+
+  <dt>Паспорт:</dt>
+  <dd><%= @renter.passport %></dd>
+
+  <dt>Адрес проживание:</dt>
+  <dd><%= @renter.address %></dd>
+
+  <dt>Прописка:</dt>
+  <dd><%= @renter.registration %></dd>
+
+  <dt>Фактический адрес:</dt>
+  <dd><%= @renter.fact_address %></dd>
+
+  <dt>Депозит:</dt>
+  <dd><%= @renter.deposit %></dd>
 
   <dt>Email:</dt>
   <dd><%= @renter.email %></dd>
