--- a/app/views/renters/edit.html.erb
+++ b/app/views/renters/edit.html.erb
@@ -25,8 +25,38 @@
   </div>
 
   <div class="form-group">
+    <%= form.label "Отчество" %>
+    <%= form.text_field :middle_name, class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
     <%= form.label "Телефон" %>
     <%= form.text_field :phone, class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+    <%= form.label "Паспорт" %>
+    <%= form.text_field :passport, class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+    <%= form.label "Адрес проживание" %>
+    <%= form.text_field :address, class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+    <%= form.label "Прописка" %>
+    <%= form.text_field :registration, class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+    <%= form.label "Фактический адрес" %>
+    <%= form.text_field :fact_address, class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+    <%= form.label "Депозит" %>
+    <%= form.text_field :deposit, class: 'form-control' %>
   </div>
 
   <div class="form-group">
