--- a/app/views/rentings/renter_reports.html.erb
+++ b/app/views/rentings/renter_reports.html.erb
@@ -19,6 +19,13 @@
   </div>
   <div class="col-md-3"></div>
 </div>
+<div class="row">
+  <div class="col-md-3"></div>
+  <div class="col-md-6">
+    <%= link_to 'Скачать отчёт как Excel', renter_report_path(@renter, format: :xlsx), class: 'btn btn-success btn-block' %>
+  </div>
+  <div class="col-md-3"></div>
+</div>
 <br>
 <br>
 <hr>
